--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,45 @@
-h1 {
-  font-family: "Poppins", "serif";
+.container {
+  margin: 0 auto;
+  max-width: 1400px;
+  font-family: "Poppins", "sans-serif";
+}
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url(../images/scotland-4236311_1280.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  padding: 200px 0;
+  margin: none;
+}
+
+header h1 {
   font-size: 96px;
-  font-weight: 700;
-  line-height: 144px;
-  text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
+  line-height: 1.5;
+  font-weight: bold;
+  margin: 0;
+}
+
+header h2 {
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 1.5;
+}
+
+header h3 {
+  font-weight: bolder;
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+}
+
+header a {
+  font-size: 14px;
+  line-height: 1.5;
+  background-color: white;
+  color: #272044;
+  padding: 13px 28px;
+  text-decoration: none;
+  border-radius: 2px;
 }
