--- a/src/styles.css
+++ b/src/styles.css
@@ -51,6 +51,32 @@ header a {
   border-radius: 2px;
 }
 
+.edinburgh {
+  background-color: white;
+  max-width: 980px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-gap: 30px;
+}
+.img-water {
+  max-width: 500px;
+}
+
+.edinburgh h2 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.5;
+  color: #272044;
+}
+.edinburgh h3 {
+  font-size: 16px;
+  opacity: 30%;
+  color: #272044;
+  letter-spacing: 5px;
+}
+.edinburgh p {
+}
 footer {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
@@ -63,7 +89,6 @@ footer {
   color: white;
 
   padding: 150px 0;
-  max-width: 1400px;
 }
 footer h3 {
   font-size: 20px;
