--- a/src/styles.css
+++ b/src/styles.css
@@ -49,6 +49,7 @@ header a {
 }
 .img-responsive {
   max-width: 100%;
+  display: block;
 }
 .edinburgh {
   background-color: white;
@@ -74,11 +75,19 @@ header a {
 .edinburgh p {
   font-size: 16px;
 }
+.cafes-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 64px;
+}
+.card {
+  background: white;
+  margin: 30px 0;
+  padding: 0 30px;
+}
 .cafes {
   text-align: center;
   background-color: white;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
 }
 .cafes h2 {
   font-weight: 700;
@@ -185,6 +194,9 @@ footer p {
   }
   .edinburgh h3 p {
     font-size: 10px;
+  }
+  .cafes-grid {
+    grid-template-columns: 1fr;
   }
   footer {
     grid-template-columns: 1fr;
