--- a/src/styles.css
+++ b/src/styles.css
@@ -85,9 +85,20 @@ header a {
   margin: 30px 0;
   padding: 0 30px;
 }
+
+.card-body {
+  padding: 30px;
+}
+.card-footer {
+  padding: 0 30px 30px;
+}
+
 .cafes {
   text-align: center;
   background-color: white;
+}
+.card-body {
+  text-align: justify;
 }
 .cafes h2 {
   font-weight: 700;
@@ -106,6 +117,14 @@ header a {
   font-weight: 400;
   font-size: 16px;
   opacity: 70%;
+}
+.btn {
+  background-color: #462cb2;
+  display: block;
+  color: white;
+  padding: 16px 32px;
+  border-radius: 3px;
+  margin-top: 30px;
 }
 footer {
   display: grid;
