added map embeds

--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@ header a {
   border-radius: 2px;
 }
 .img-responsive {
-  max-width: 100%;
+  width: 100%;
   display: block;
 }
 .main {
@@ -87,9 +87,13 @@ header a {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
+.cafes-grid-img {
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0;
+}
 .embed {
-  max-width: 100%;
-  aspect-ratio: 16/9;
+  width: 100%;
+  aspect-ratio: 1/1;
 }
 .card {
   background: white;
