got rid of auto margin

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,14 @@ body {
   color: #272044;
   line-height: 1.5;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
 .container {
   margin: 0 auto;
   max-width: 1400px;
